<resources>
    <string name="app_name">CookHelper</string>
    <string name="hello">Hello Steven</string>
    <string name="no_recipes">No Recipes</string>
    <string name="main_screen_title">Recipes</string>
    <string name="dialog_delete_title">Confirm</string>
    <string name="dialog_delete_message">Do you want to delete this recipe?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="search_hint">Type in the name or type of recipe you are looking for</string>
    <string name="search_title">Search for Recipe</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="application_description">Application description</string>
    <string name="cookhelper_is_designed_by_the_group_name_as_league_of_smiles_created_by_four_individuel_university_of_ottawa_students">CookHelper is designed by the group name as League of Smiles, created by four individuel University of Ottawa students.</string>
    <string name="contact">Contact</string>
    <string name="the_cookhelper_application_provides_many_good_recipe_services_it_provides_verity_of_unique_dishes_to_prepare_and_some_nutrition_facts_about_them">The CookHelper application provides many good recipe services. It provides verity of unique dishes to prepare and some nutrition facts about them...</string>
    <string name="aabdu007_uottawa_ca">aabdu007@uottawa.ca</string>
    <string name="help">Help</string>
    <string name="finding_recipe">Finding Recipe</string>
    <string name="add_edit_recipe">Add/Edit Recipe</string>
    <string name="edit_click_of_the_recipe_you_want_to_edit_click_on_the_edit_icon_then_edit_anything_you_please_to_delete_a_recipe_just_click_on_the_garbage_icon">Edit: Click of the recipe you want to edit. Click on the edit icon, then edit anything you please. To delete a recipe, just click on the garbage icon.</string>
    <string name="editing_deleting_recipe">Editing/Deleting Recipe</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_type">Add New Type</string>
    <string name="dialog_add_confirm">Add</string>
    <string-array name="categories_array">
        <item>Italian</item>
        <item>Spanish</item>
        <item>Indian</item>
        <item>Jamaican</item>
        <item>American</item>
        <item>Canadian</item>
        <item>French</item>
        <item>Other</item>
    </string-array>
    <string-array name="types_array">
        <item>Appetizer</item>
        <item>Dessert</item>
        <item>Meal</item>
    </string-array>

</resources>
