<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.06" />

    <TextView
        android:id="@+id/applicationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/application_description"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/applicationDescritionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:text="@string/the_cookhelper_application_provides_many_good_recipe_services_it_provides_verity_of_unique_dishes_to_prepare_and_some_nutrition_facts_about_them"
        android:textColorLink="?attr/editTextColor"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/about_us"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/cookhelper_is_designed_by_the_group_name_as_league_of_smiles_created_by_four_individuel_university_of_ottawa_students" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/contact"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/GroupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aabdu007_uottawa_ca" />

</LinearLayout>
