<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_about_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="UselessParent"
        android:id="@+id/informationContainer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:ems="10"
            android:id="@+id/about"
            android:layout_weight="0.06"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="0.06"
            android:layout_height="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_description"
            android:ems="10"
            android:id="@+id/applicationDescription"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:text="@string/the_cookhelper_application_provides_many_good_recipe_services_it_provides_verity_of_unique_dishes_to_prepare_and_some_nutrition_facts_about_them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/applicationDescritionText"
            android:layout_weight="0.09"
            android:textColorLink="?attr/editTextColor"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:ems="10"
            android:id="@+id/aboutUs"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:text="@string/cookhelper_is_designed_by_the_group_name_as_league_of_smiles_created_by_four_individuel_university_of_ottawa_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutUsText"
            android:layout_weight="0.08" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:ems="10"
            android:id="@+id/Contact"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:text="@string/aabdu007_uottawa_ca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/GroupEmail" />

    </LinearLayout>

</LinearLayout>
