<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uottawa.leagueofsmiles.cookhelper.HelpPageActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="HELP PAGE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_above="@+id/scrollView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam,UnknownId" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            tools:ignore="ObsoleteLayoutParam">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/finding_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/findingRecipe"
                    android:textSize="18sp"
                    android:lineSpacingExtra="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:text="To find a recipe, either type the recipe name in the search bar or look through the list of recipe provided. "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/findingRecipeInfo"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/findingrecipe"
                    android:id="@+id/findRecipeImage"
                    android:contentDescription="findingRecipe"
                    tools:ignore="HardcodedText"
                    android:layout_height="500dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:text="@string/add_edit_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addRecipe"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="18dp" />

                <TextView
                    android:text="Click on the plus sign icon to add a new recipe."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AddRecipeInfo"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/addingrecipe"
                    android:id="@+id/addRecipeImage"
                    tools:ignore="ContentDescription"
                    android:layout_height="500dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

                <TextView
                    android:text="@string/editing_deleting_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editDeleteRecipe"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:text="@string/edit_click_of_the_recipe_you_want_to_edit_click_on_the_edit_icon_then_edit_anything_you_please_to_delete_a_recipe_just_click_on_the_garbage_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editingRecipeInfo" />

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/editanddelete"
                    android:id="@+id/editAndDeleteImage"
                    tools:ignore="ContentDescription"
                    android:layout_height="500dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
